[gd_scene load_steps=6 format=3 uid="uid://dtu23eyyf4gyl"]

[ext_resource type="Script" path="res://scripts/Cell.gd" id="1_nuip3"]
[ext_resource type="Texture2D" uid="uid://g4ol8y7l4mhh" path="res://graphics/cell.png" id="2_alf5t"]
[ext_resource type="Script" path="res://scripts/MouseRegion.gd" id="3_jbp8l"]
[ext_resource type="AudioStream" uid="uid://dek8ap1j8omnx" path="res://sound/happy-pop-3-185288.wav" id="4_qj5js"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxhap"]
size = Vector2(50, 50)

[node name="Cell" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchor_right = 0.05
anchor_bottom = 0.067
offset_bottom = -0.32
pivot_offset = Vector2(32, 32)
mouse_filter = 2
script = ExtResource("1_nuip3")

[node name="CellSprite" type="TextureRect" parent="."]
texture_filter = 4
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
mouse_filter = 2
texture = ExtResource("2_alf5t")
expand_mode = 1
stretch_mode = 4

[node name="PieceSprite" type="TextureRect" parent="."]
custom_minimum_size = Vector2(58, 58)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -28.0
offset_right = 28.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(29, 29)
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="MouseRegion" type="Button" parent="." groups=["CellsButtons"]]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
mouse_filter = 1
action_mode = 0
flat = true
script = ExtResource("3_jbp8l")

[node name="GrabSound" type="AudioStreamPlayer" parent="MouseRegion"]
stream = ExtResource("4_qj5js")
volume_db = -20.0

[node name="DragArea" type="Area2D" parent="MouseRegion"]
z_index = 1
input_pickable = false

[node name="DragBox" type="CollisionShape2D" parent="MouseRegion/DragArea"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_bxhap")

[connection signal="mouse_entered" from="MouseRegion" to="." method="_on_mouse_region_mouse_entered"]
[connection signal="mouse_exited" from="MouseRegion" to="." method="_on_mouse_region_mouse_exited"]
[connection signal="pressed" from="MouseRegion" to="MouseRegion" method="_onMouseRegionPressed"]
[connection signal="area_entered" from="MouseRegion/DragArea" to="MouseRegion" method="_onAreaEntered"]
